# polyglot-site-translator

./: .deepsource.toml  .gitignore  .pre-commit-config.yaml  AGENTS.md  AI_CONTEXT.md  ARCHITECTURE.md  ARCHITECTURE_DECISIONS.md  ARCHITECTURE_GUARDRAILS.md  CODEBASE_ENTRYPOINTS.md  DOMAIN_MAP.md  LICENSE  README.md  README_es.md  REPO_MAP.md  STYLE.md  TESTING.md  pyproject.toml  run_app.py
.github/: dependabot.yml
.github/workflows/: ci.yml
features/: environment.py
features/presentation/: framework_detection.feature  frontend_shell.feature  po_processing.feature  remote_connections.feature  settings.feature  site_registry.feature  sync.feature  sync_filters.feature
features/steps/: framework_detection_steps.py  frontend_shell_steps.py  po_processing_steps.py  remote_connection_steps.py  site_registry_steps.py  sync_filter_steps.py  sync_steps.py
legacy/: README.md  traducir.py
requirements/: base.txt  dev.txt
src/polyglot_site_translator/: __init__.py  __main__.py  app.py  bootstrap.py
src/polyglot_site_translator/adapters/: __init__.py  base.py  common.py  django.py  flask.py  framework_registry.py  wordpress.py
src/polyglot_site_translator/domain/: __init__.py
src/polyglot_site_translator/infrastructure/: __init__.py  database_location.py  po_files.py  po_translation_cache_shelve.py  po_translator_googletrans.py  settings.py  site_registry_sqlite.py  site_secrets.py  sync_gitignore.py  sync_local.py  sync_scope_sqlite.py
src/polyglot_site_translator/presentation/: __init__.py  contracts.py  errors.py  fakes.py  frontend_shell.py  router.py  site_registry_services.py  ui_localization.py  view_models.py
src/polyglot_site_translator/services/: framework_detection.py  framework_sync_scope.py  po_processing.py  project_sync.py  remote_connections.py  site_registry.py
tests/: __init__.py  conftest.py  run_docstring_audit.py
tests/integration/presentation/: test_app_entrypoint.py  test_framework_detection_flow.py  test_kivy_screen_navigation.py  test_main_module.py  test_navigation_flow.py  test_project_editor_screen_runtime.py  test_remote_connection_editor_flow.py  test_run_app_launcher.py  test_settings_navigation_flow.py  test_settings_screen_runtime.py  test_site_registry_flow.py  test_sync_flow.py
tests/support/: __init__.py  frontend_doubles.py
tests/unit/: test_repository_static_standards.py
tests/unit/adapters/: test_adapter_common.py  test_django_adapter.py  test_flask_adapter.py  test_framework_detection_registry.py  test_wordpress_adapter.py
tests/unit/domain/: test_site_registry_locales.py  test_sync_models.py  (+1 more)
(+104 files in other folders)
