[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "polyglot-site-translator"
version = "0.1.0"
description = "Cross-platform Kivy application for auditing and translating websites with pluggable framework adapters."
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
  {name = "Javier Marcon"}
]
keywords = [
  "translation",
  "localization",
  "kivy",
  "wordpress",
  "django",
  "flask",
  "audit",
  "sqlite",
  "ftp",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Localization",
  "Topic :: Software Development :: Libraries :: Application Frameworks",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra --strict-config --strict-markers --import-mode=importlib"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
markers = [
  "unit: fast isolated tests",
  "integration: tests that exercise multiple layers",
  "ui: tests related to Kivy presentation/orchestration",
]

[tool.coverage.run]
branch = true
source = ["src"]
omit = [
  "tests/*",
  "*/__init__.py",
]

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 80
exclude_lines = [
  "pragma: no cover",
  "if TYPE_CHECKING:",
  "raise NotImplementedError",
  "if __name__ == .__main__.:",
]

[tool.mypy]
python_version = "3.12"
files = ["src", "tests", "features/steps"]
strict = true
warn_unused_configs = true
warn_unreachable = true
exclude = [
  '^build/',
  '^dist/',
  '^\.venv/',
  '^legacy/',
]

[[tool.mypy.overrides]]
module = [
  "kivy.*",
]
ignore_missing_imports = true

[tool.ruff]
target-version = "py312"
line-length = 100
extend-exclude = [
  "build",
  "dist",
  ".venv",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.ruff.lint]
select = [
  "E",
  "W",
  "F",
  "I",
  "N",
  "UP",
  "B",
  "C4",
  "SIM",
  "RET",
  "PTH",
  "ERA",
  "RUF",
  "TRY",
  "EM",
  "BLE",
  "PL",
]
ignore = [
  "TRY003",
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
  "PLR2004",
  "S101",
]

[tool.ruff.lint.isort]
combine-as-imports = true
force-sort-within-sections = true
